--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
         url 'https://papermc.io/repo/repository/maven-public/'
     }
 }
-task stage(dependsOn: ['build', 'clean'])
+task stage(dependsOn: ['shadowJar', 'clean'])
 build.mustRunAfter clean
 
 dependencies {
